--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,30 @@
 [package]
 name = "tflitec"
-version = "0.6.0"
-authors = ["ebraraktas <ebrar@voys.ai>"]
+version = "0.7.0-minimal"
+authors = ["ebraraktas <ebrar@voys.ai>", "AI Assistant"]
 edition = "2018"
 license = "MIT"
-description = "A safe Rust wrapper of TensorFlow Lite C API supporting x86_64 and ARM (iOS, Android)"
-repository = "https://github.com/VoysAI/tflitec-rs"
-keywords = ["bindings", "tensorflow", "machine-learning", "ffi", "cross-platform"]
+description = "A minimal, high-performance Rust wrapper for TensorFlow Lite C API with native XNNPACK support"
+repository = "https://github.com/agent-edge-rs/tflitec-rs"
+keywords = ["bindings", "tensorflow", "machine-learning", "xnnpack", "minimal"]
 categories = ["api-bindings", "science"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "tflitec"
 
 [dependencies]
+# No runtime dependencies needed - we use direct C bindings
 
 [build-dependencies]
-bindgen = "0.65"
-fs_extra = "1.3"
-curl = "0.4"
+# Minimal build dependencies - no bindgen needed!
 
 [features]
+default = ["xnnpack"]
 xnnpack = []
 xnnpack_qu8 = ["xnnpack"]
 xnnpack_qs8 = ["xnnpack"]
 
-# docs.rs-specific configuration
+# docs.rs configuration
 [package.metadata.docs.rs]
-# document all features
-all-features = true
-# defines the configuration attribute `docsrs`
-rustdoc-args = ["--cfg", "docsrs"]
+features = ["xnnpack"]
+default-target = "x86_64-unknown-linux-gnu"
